--- a/FuelEconomy/src/FuelEconomy/Views/Shared/_Layout.cshtml
+++ b/FuelEconomy/src/FuelEconomy/Views/Shared/_Layout.cshtml
@@ -16,6 +16,11 @@
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
     @Html.ApplicationInsightsJavaScript(TelemetryConfiguration)
+    <style>
+        .container .body-content !important{
+            width: 1300px;
+        }
+    </style>
 </head>
 <body style="font-size:11px;">
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -31,6 +36,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li><a asp-area="" asp-controller="Vehicles" asp-action="Index">Vehicles</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
